objects/Production__c.object
<CustomObject>
    <description>Production can be movies, tv shows or games in our app.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Production for high level overview</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <label>Estimated Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fun_Facts__c</fullName>
        <label>Fun Facts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IMDB_URL__c</fullName>
        <description>This field contains the web address on IMDB for Production</description>
        <label>IMDB URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Number_of_Episodes__c</fullName>
        <description>Total number of episodes Test2 that are in a TV Series</description>
        <label>Number of Episodes</label>
        <summaryForeignKey>Episode__c.TV_Show__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year that the Production was initially released</description>
        <inlineHelpText>The calendar year this production was originally released</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_production__c</fullName>
        <label>test production</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Production</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Production Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productions</pluralLabel>
    <recordTypes>
        <fullName>Movie</fullName>
        <active>true</active>
        <description>For Movie Production</description>
        <label>Movie</label>
    </recordTypes>
    <recordTypes>
        <fullName>TV_Show</fullName>
        <active>true</active>
        <description>TV Show Productions</description>
        <label>TV Show</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video_Games</fullName>
        <active>true</active>
        <description>Production type for Video games</description>
        <label>Video Games</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>